--- a/PopCoGenomeS_R.yml
+++ b/PopCoGenomeS_R.yml
@@ -11,3 +11,7 @@ dependencies:
   - r-micropan=2.1
   - r-phylotools=0.2.2
   - phyml=3.3.20220408
+  - r-vctrs=0.6.5
+  - r-pillar=1.9.0
+  - r-tibble=3.2.0
+  - r-tidyselect=1.2.0
